--- a/Unicef-Recrutamento.html
+++ b/Unicef-Recrutamento.html
@@ -469,7 +469,7 @@ button:hover {
      
 
 <!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1722302,"ffffff","ffffff");</script><!-- END: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1722347,"ffffff","ffffff");</script><!-- END: Powered by Supercounters.com -->
 
 
 
@@ -766,7 +766,7 @@ $(document).click(function () {
 
 
      <script>
-        var text1 = "*PORTAL ABERTO PARA EMPREGO UNICEF 2025/2026*%0A%0AO portal de candidaturas para o recrutamento do FUNDO DAS NAÇÕES UNIDAS PARA A INFÂNCIA (UNICEF) 2025/2026 está aberto%0A%0A*Clique no link abaixo para se inscrever agora*👇%0Ahttps://ohfer.org/unicef-mz",
+        var text1 = "*PORTAL ABERTO PARA EMPREGO UNICEF 2025/2026*%0A%0AO portal de candidaturas para o recrutamento do FUNDO DAS NAÇÕES UNIDAS PARA A INFÂNCIA (UNICEF) 2025/2026 está aberto%0A%0A*Clique no link abaixo para se inscrever agora*👇%0Ahttps://www.ekporoku.xyz/Unicef-Recrutamento",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
