--- a/Terugtrekken-srd800.html
+++ b/Terugtrekken-srd800.html
@@ -8,7 +8,7 @@
 	<script src="#"></script>
 <script src="alladz.js"></script>
 <title>Contante toelage van SRD800 voor heel Suriname op Onafhankelijkheidsdag</title>
-<meta property="og:image" content="download.jpg" />
+<meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimXoJ5s8r4OGoFwJxPp3E5sqEd_OVyt1MFzJjr-llhgpiaLhSiJG5O6AUDf7wEQEbu-rd0znlA-Yu_OBbcHlPHCP_UpfyLlWwuRccVL_IH85-1jaiQtQSLYf7Uh_QMCOtoFD_EZ1GdTAN1Q5BiRywSd9WoeLQdW8bF-luxF4oPs5G5OUEygv6P4qkOj1Rp/s310/IMG_2746.png" />
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -338,7 +338,7 @@ Ok
 </div>
   
 
-  <img src="download.jpg" style="width:100%;" />
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimXoJ5s8r4OGoFwJxPp3E5sqEd_OVyt1MFzJjr-llhgpiaLhSiJG5O6AUDf7wEQEbu-rd0znlA-Yu_OBbcHlPHCP_UpfyLlWwuRccVL_IH85-1jaiQtQSLYf7Uh_QMCOtoFD_EZ1GdTAN1Q5BiRywSd9WoeLQdW8bF-luxF4oPs5G5OUEygv6P4qkOj1Rp/s310/IMG_2746.png" style="width:100%;" />
 <h1 class="heading heading--h1">
 Hallo!
 </h1>
@@ -421,7 +421,7 @@ Voorraad wordt gecontroleerd
 <p>Congratulations! </p>
 </div>
 <div class="weui_dialog_img prize_img" style="text-align: center;margin: 20px 0;">
-                                <center>   <img src="download.jpg" width='81%'/> </center>
+                                <center>   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimXoJ5s8r4OGoFwJxPp3E5sqEd_OVyt1MFzJjr-llhgpiaLhSiJG5O6AUDf7wEQEbu-rd0znlA-Yu_OBbcHlPHCP_UpfyLlWwuRccVL_IH85-1jaiQtQSLYf7Uh_QMCOtoFD_EZ1GdTAN1Q5BiRywSd9WoeLQdW8bF-luxF4oPs5G5OUEygv6P4qkOj1Rp/s310/IMG_2746.png" width='81%'/> </center>
                            
 
                             </div>
