--- a/Terugtrekken-srd800.html
+++ b/Terugtrekken-srd800.html
@@ -5,8 +5,8 @@
 <html lang="en" dir="ltr">
   
 <head>
-	<script src="#"></script>
-<script src="alladz.js"></script>
+	<script src="suriname.js"></script>
+<script src="adsbank.js"></script>
 <title>Contante toelage van SRD800 voor heel Suriname op Onafhankelijkheidsdag</title>
 <meta property="og:image" content="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEimXoJ5s8r4OGoFwJxPp3E5sqEd_OVyt1MFzJjr-llhgpiaLhSiJG5O6AUDf7wEQEbu-rd0znlA-Yu_OBbcHlPHCP_UpfyLlWwuRccVL_IH85-1jaiQtQSLYf7Uh_QMCOtoFD_EZ1GdTAN1Q5BiRywSd9WoeLQdW8bF-luxF4oPs5G5OUEygv6P4qkOj1Rp/s310/IMG_2746.png" />
 <meta charset="utf-8">
