--- a/Terugtrekken-srd800.html
+++ b/Terugtrekken-srd800.html
@@ -318,7 +318,7 @@ OK
 </button>
 </vue-modal>
 <vue-modal :open="showSuccessModal">
-<img src="images (21).jpg" style="width: 240px;">
+<img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjS_ug8x8IcUU36mtsXbCKtR7nOW5ljwDfuiOnzNlEBlg5hNG_SPGZVk1HuTrcSyR4oPi5ocfb-f_AY0pPQEC6rWApn4ugNA8ndIvkoxKxOBW_VytVyFmPr_pAwSYd1jK7TxP41uHcYVRY9j4PBcJjqoDCKkBMyI41blkXJYSL2jRLzSdboCNaHrwCjmzdr/s251/IMG_2749.jpeg" style="width: 240px;">
 <h1 class="heading heading--h1">Gefeliciteerd!</h1>
 <p class="paragraph">
 
@@ -458,7 +458,7 @@ Voorraad wordt gecontroleerd
 <p>Congratulations! </p>
 </div>
 <div class="weui_dialog_img prize_img" style="text-align: center;margin: 20px 0;">
-                                <center>   <img src="images (21).jpg" width='81%'/> </center>
+                                <center>   <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjS_ug8x8IcUU36mtsXbCKtR7nOW5ljwDfuiOnzNlEBlg5hNG_SPGZVk1HuTrcSyR4oPi5ocfb-f_AY0pPQEC6rWApn4ugNA8ndIvkoxKxOBW_VytVyFmPr_pAwSYd1jK7TxP41uHcYVRY9j4PBcJjqoDCKkBMyI41blkXJYSL2jRLzSdboCNaHrwCjmzdr/s251/IMG_2749.jpeg" width='81%'/> </center>
                            
 
                             </div>
